Add setup foundation
